# vpc-flow-logs-lm

./: .env.example  .gitignore  CLAUDE.md  README.md
azure-function/vnet-flow-forwarder/: function_app.py  host.json  lm_ingest.py
azure/vnet-subnet-usage/: pyproject.toml
datasources/: AWS_NetworkFirewall_Custom.json  AWS_Shield_Custom.json  AWS_WAF_Custom.json  KPMG_AWS_WAF_Metrics_AD.groovy
docs/: aws-security-datasource-status.md  kpmg_logging_spec.md  lessons.md  logging_spec.md  plan.md  todo.md
gcp/vpc-flow-logs/: pyproject.toml
gcp/vpc-flow-logs/cloud_function/: config.py  flow_log_parser.py  lm_auth.py  lm_client.py  main.py  requirements.txt
gcp/vpc-flow-logs/cloud_function/tests/: conftest.py  test_config.py  test_end_to_end.py  test_flow_log_parser.py  test_lm_auth.py  test_lm_client.py  test_main.py  test_sample_data.py
gcp/vpc-flow-logs/cloud_function/tests/sample_data/: flow_log_external.json  flow_log_gke.json  flow_log_src_vm.json  pubsub_cloud_event.json  pubsub_cloud_event_external.json
gcp/vpc-flow-logs/documentation/: GCP_VPC_Flow_Logs_LM_Deployment_Guide.docx  customer_guide.md  generate_customer_docs.py  webhook_logsource_setup.md
gcp/vpc-flow-logs/infra/: check_permissions.sh  deploy_function.sh  generate_test_traffic.sh  run_local.sh  setup_gcp.sh  variables.env.example
lambda/webhook-forwarder/: cloudformation.yaml  handler.py
logsources/: vnet_flow_logs_logsource.json  vpc_flow_logs_logsource.json  waf_logs_logsource.json
scripts/aws/: create-subscription-filter.sh  deploy-lm-logs-forwarder.sh  (+8 more)
tests/: test-aws-vpc-flow.sh
(+62 files in other folders)
